crates/ui/tests/it/snapshots/it__key_bindings_screen__leaving_is_blocked_until_confirm_has_a_key_again.snap
---
source: crates/ui/tests/key_bindings_screen.rs
expression: h.snapshot()
---
                                                                                                    
  ┌─ Key bindings · Right-handed ────────────────────────────────────────────────────────────────┐  
  │                                                                                              │  
  │                           Key 1             Key 2             Key 3                          │  
  │ Must have a key                                                                              │  
  │   Cursor up               Up                ·                 ·                              │  
  │   Cursor down             Down              ·                 ·                              │  
  │   Cursor left             Left              ·                 ·                              │  
  │   Cursor right            Right             ·                 ·                              │  
  │   Confirm                 ·                 ·                 ·                 ! not mapped │  
  │   Cancel  + Escape        d                 ·                 ·                              │  
  │   End turn                Space             ·                 ·                              │  
  │                                                                                              │  
  │ Optional                                                                                     │  
  │   Select                  ·                 ·                 ·                 ! not mapped │  
  │   Confirm end turn        ·                 ·                 ·                 ! not mapped │  
  │   Previous ready unit     a                 ·                 ·                              │  
  │   Next ready unit         s                 ·                 ·                              │  
  │   Unit info               f                 ·                 ·                              │  
  │   Danger zone             w                 ·                 ·                              │  
  │   Auto-end on/off         Shift+Space       ·                 ·                              │  
  │   Rewind                  r                 ·                 ·                              │  
  │   Map menu                ·                 ·                 ·                 ! not mapped │  
  │                                                                                              │  
  │   Restore defaults                                                                           │  
  │                                                                                              │  
  │                                                                                              │  
  └──────────────────────────────────────────────────────────────────────────────────────────────┘  
                                                                                                    
                                      Give Confirm a key first                                      
                                                                                                    
                            arrows move · f bind · Delete clear · d back                            
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aabbcccccccccccccccccccccccccccccbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddeeeeedddddddddddddeeeeedddddddddddddeeeeeddddddddddddddddddddddddddbaa
aabdfffffffffffffffddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddgggggggdddddddddddddddddedddddddddddddddddedddddddddddddddddedddddddddddddddddhhhhhhhhhhhhdbaa
aabdddddddddddeeeeeeeeddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabdffffffffdddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddedddddddddddddddddedddddddddddddddddedddddddddddddddddeeeeeeeeeeeedbaa
aabdddddddddddddddddddddddddddedddddddddddddddddedddddddddddddddddedddddddddddddddddeeeeeeeeeeeedbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddcccccccccddddddddddddddiiiiiiiiiiiiiiiidddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddddddddddddddddddddedddddddddddddddddeddddddddddddddddddddddddddddddbaa
aabdddddddddddddddddddddddddddedddddddddddddddddedddddddddddddddddedddddddddddddddddeeeeeeeeeeeedbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddbaa
aabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaajjjjjjjjjjjjjjjjjjjjjjjjaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaakkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text_highlight bg:panel_bg
d = fg:text bg:panel_bg
e = fg:text_dim bg:panel_bg
f = fg:panel_border_focus bg:panel_bg
g = fg:white bg:panel_bg
h = fg:hp_low bg:panel_bg
i = fg:panel_bg bg:panel_border_focus
j = fg:hp_low bg:black
k = fg:text_dim bg:black
